# TaleDotFun

./: .gitignore  Anchor.toml  INSTALLATION.md  README.md  package-lock.json
app/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
app/src/: App.vue  NFTMint.vue  main.js  router.js  style.css
app/src/anchor/: idl.ts  readium_fun.json  tale_governance.json  tale_nft.json  tale_story.json
app/src/components/: AllCrud.vue  AvatarUploader.vue  CandyMachineCreator.vue  CreateNFT.vue  EpisodeManager.vue  Governance.vue  MintComponent.vue  NFTCard.vue  NFTList.vue  TaleManager.vue  WalletConnect.vue  auth.vue  readium_fun.json
app/src/new_components/: BuyNFT.vue  ConnectWallet.vue  CreateNFT.vue  ListNFTs.vue  NFTCard.vue
backend/: package-lock.json  package.json  server.js  vercel.json
backend/controllers/: authController.js  episodeController.js  ipfsController.js  mintActivityController.js  taleController.js  userController.js
backend/middleware/: authMiddleware.js
backend/models/: Episode.js  EpisodeImageSet.js  MintActivity.js  MintedEditionInfo.js  NftDesignDefinition.js  NftModels.js  Tale.js  User.js
backend/routes/: authRoutes.js  designs.js  episodeRoutes.js  ipfsRoutes.js  mintActivityRoutes.js  nftRoutes.js  taleRoutes.js  userRoutes.js  walletRoutes.js
backend/services/: hashingService.js  pinataService.js
programs/readium-fun/: Cargo.toml
programs/readium-fun/src/: lib.rs
programs/tale-governance/: Cargo.toml
programs/tale-nft/: Cargo.toml
programs/tale-story/: Cargo.toml
tests/: readium-fun.ts
(+29 files in other folders)
